Fix tablet keyboard cutting off message modal

--- a/src/index.css
+++ b/src/index.css
@@ -998,7 +998,7 @@ h1 {
   Send
   ========================================
 */
-@media only screen and (max-width: 799px) {
+@media only screen and (max-width: 1366px) {
   .messages-form {
     margin: 0 auto;
     margin-bottom: 5vh;
@@ -1088,7 +1088,7 @@ h1 {
   }
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 1367px) {
   .messages-form {
     margin: 0 auto;
     margin-bottom: 5vh;
